# sample-openai-on-aws

./: .gitignore  .gitlab-ci.yml  AUTH_HELPER.md  OSS_Agents_With_OpenAI_Compatible_Endpoint.ipynb  QUICKSTART.md  README.md
.github/: dependabot.yml
Bedrock/: Getting_Started_Guide_Bedrock.ipynb  OSS_Agents_With_OpenAI_Compatible_Endpoint.ipynb
SMML/sglang-inference/: README.md  requirements-dev.txt
SageMaker/: OpenAI-OSS-IC-EXA-sample.ipynb
Strands/: gpt-oss-cli.py  requirements.txt
archive/: README.md
archive/Bedrock/: math_mcp_server.py
archive/Strands/: README.md  gpt-oss-cli.py  requirements.txt
aws-oidc-auth/: .gitignore  Makefile  README.md  go.mod  go.sum
bedrock-chat/: README.md  chat.py  config.py  requirements.txt
bedrock-chat/tests/: test_chat.py
deployment/infrastructure/: README.md  bedrock-auth-auth0.yaml  bedrock-auth-azure.yaml  bedrock-auth-cognito-pool.yaml  bedrock-auth-okta.yaml  codex-dashboard.yaml  (+8 more)
docs/: OIDC_SELF_SERVICE_SETUP.md  QUICKSTART_NATIVE_AWS_ACCESS.md  deploy-identity-center.md
guidance-for-codex-on-amazon-bedrock/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  QUICKSTART.md  README.md
open-ai-models-and-codex-workshop/: AGENTS.md  FACILITATOR_GUIDE_TEMPLATE.md  contentspec.yaml
openai-codex-sqltoER-mcp/: README.md
openai-codex-sqltoER-mcp/mcp/mysql-er-diagram/: README.md  mcp-config.example.json  pyproject.toml  requirements.txt  server.py
openai-codex-sqltoER-mcp/mcp/mysql-er-diagram/src/mysql_er_diagram_mcp/: __init__.py  main.py
otel-helper/: .gitignore  Makefile  go.mod  main.go  main_test.go
(+151 files in other folders)
